-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.2.0
-
None
-
Arch Linux x86-64
Qt 5.3.1
-
e8305e3ed2349b95c7311c296febc6d75f1a0c2a
If you start debugging a Qt Quick 2 project on a remote device (e.g. another Linux system), QML debugging doesn't work. It seems it is missing the -qmljsdebugger argument when launching the program on the remote device.
If you add -qmljsdebugger=port:10001,block to the Run arguments, QML debugging works.
| For Gerrit Dashboard: QTCREATORBUG-12928 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 93676,1 | RemoteLinux: Fix mixed debugging. | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 93684,2 | RemoteLinux: Fix mixed debugging. | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |