RemoteLinux: Fix mixed debugging.

The QML part was broken due to recent changes relating to gdbserver
"multi" mode.

Task-number: QTCREATORBUG-12928
Change-Id: Ia806f0cbfedd6961138f7cd89a0387bd851ff83e
Reviewed-by: Robert Loehning <robert.loehning@digia.com>
Reviewed-by: hjk <hjk121@nokiamail.com>